# cortex-mem

./: .gitignore  Cargo.toml  README.md  README_zh.md
cortex-mem-cli/: Cargo.toml
cortex-mem-cli/src/: main.rs
cortex-mem-cli/src/commands/: get.rs  mod.rs  search.rs  session.rs  vector.rs
cortex-mem-core/: Cargo.toml
cortex-mem-core/src/: cascade_layer_updater.rs  memory_cleanup.rs  memory_event_coordinator.rs  types.rs  vector_sync_manager.rs
cortex-mem-core/src/automation/: layer_generator.rs  manager.rs  mod.rs  sync.rs
cortex-mem-core/src/search/: vector_engine.rs
cortex-mem-core/src/session/: extraction.rs  manager.rs
cortex-mem-core/src/vector_store/: mod.rs  qdrant.rs
cortex-mem-insights/src/lib/: api.ts
cortex-mem-mcp/src/: service.rs
cortex-mem-rig/: Cargo.toml  README.md
cortex-mem-rig/src/tools/: mod.rs
cortex-mem-service/: Cargo.toml
cortex-mem-service/src/: main.rs  models.rs  state.rs
cortex-mem-service/src/handlers/: automation.rs  sessions.rs
cortex-mem-tools/: Cargo.toml
cortex-mem-tools/src/: errors.rs  lib.rs  operations.rs
cortex-mem-tools/tests/: core_functionality_tests.rs
examples/cortex-mem-tars/: Cargo.toml
examples/locomo-evaluation/: README.md  judge.py  judge_util.py  pyproject.toml  stat_judge_result.py
examples/locomo-evaluation/cortex_mem_locomo_evaluation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
litho.docs/en/: 2.Architecture.md  3.Workflow.md
litho.docs/zh/: 2、架构概览.md  3、核心流程.md
scripts/: README.md  create_test_data.sh  publish-crates.js  update-versions.js
(+42 files in other folders)
