[project]
name = "cortex-mem-locomo-evaluation"
version = "0.1.0"
description = "LoCoMo evaluation toolkit for Cortex Memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[tool.setuptools]
py-modules = ["eval", "judge", "judge_util", "stat_judge_result"]
